tests/gabc-dump/should-fail/bad-brackets.gabc
name: bad brackets;
%%
(c4) g(g) g(g[[]])
